# unix_course_2021

./: README.md  ReadMe.md
02_TerminalProject/: Makefile
03_Multifile/: Makefile  fun.c  prog.c
03_TerminalProject/: Show.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c  test1.gdb  test2.gdb
06_TracingFencing/: Makefile  move.c  my_remove.c  test.sh
07_Environmental/: Makefile.am  ReadMe.md  configure.ac  rhasher.c  tests.sh
08_Regexps/: Makefile.am  ReadMe.md  configure.ac  esub.c  tests.sh
09_Testing/: ReadMe.md  configure.ac
09_Testing/src/: Makefile.am  buf.c  buf.h  libbuf.c
09_Testing/tests/: Makefile.am  test_buf_grow.ts  test_buf_pop.ts  test_buf_push.ts  test_init.ts  test_null.ts
10_I18n/: Makefile.am  ReadMe.md  configure.ac  guess.c
10_I18n/po/: Makefile.am  ru.po
11_Documenting/: Doc.md  Doxyfile.in  Makefile.am  ReadMe.md  configure.ac  guess.c
11_Documenting/po/: Makefile.am  guess.pot  ru.po
12_PatchInstall/: Makefile.am  ReadMe.md  configure.ac  guess.c  guess.pot  ru.po
